Updating for EMR releases, new features, issue fixes.